[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/UITextBox.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/HelvetiPixel.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.164706, 0.137255, 0.611765, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="UITextBox" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="SourceLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 96.0
margin_right = 292.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Speaker Name"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -69.0
margin_right = -26.0
margin_bottom = -5.0

[node name="TextBoxContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 270.0
margin_bottom = 64.0

[node name="Panel" type="Panel" parent="MarginContainer/TextBoxContainer"]
margin_right = 270.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TextBoxContainer"]
margin_right = 270.0
margin_bottom = 64.0
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TextBoxContainer/MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="MarginContainer/TextBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 245.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Placeholder text..."
autowrap = true
clip_text = true

[node name="End" type="Label" parent="MarginContainer/TextBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 249.0
margin_top = 34.0
margin_right = 256.0
margin_bottom = 50.0
rect_min_size = Vector2( 7, 0 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "v"

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
